# trashtv1

./: .gitignore
backend/: .dockerignore  .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/src/archigetter/: __init__.py  __main__.py  _logging.py  _settings.py
backend/src/archigetter/api/: __init__.py  api.py
backend/src/archigetter/archicrawler/: __init__.py  crawler.py  crud.py
backend/src/archigetter/archisender/: __init__.py  crud.py
backend/src/archigetter/database/: __init__.py  connector.py
backend/src/archigetter/database/models/: __init__.py  trashtv.py
backend/tests/: README.md  conftest.py  test_archigetter_version.py  test_settings.py
backend/tests/data/: sample_archillect_index_200.html  sample_archillect_index_404.html
backend/tests/test_api/: __init__.py  test_api.py
backend/tests/test_archicrawler/: test_crawler.py  test_crud.py
backend/tests/test_database/: __init__.py  test_connector.py
